--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node" : "10.9.0"
   },
   "scripts": {
-    "postinstall": "ng build --aot --prod",
+    "postinstall": "ng build --prod",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
