--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node" : "10.9.0"
   },
   "scripts": {
-    "postinstall": "ng build --prod",
+    "postinstall": "ng build --aot --prod",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -19,6 +19,7 @@
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
+    "@angular/cli": "~6.1.5",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
     "@angular/platform-browser": "^6.1.0",
@@ -30,7 +31,6 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": "~6.1.5",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.6",
