--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "npm": "6.4.1"
   },
   "scripts": {
-    "postinstall": "ng build --aot --prod",
+    "postinstall": "ng build --prod",
     "ng": "ng",
     "start": "node serve.js",
     "build": "ng build",
